# DentalSync

./: .env.example  .gitignore  HANDOVER.md  README.md  docker-compose.dev.yml
.claude/: CLAUDE.md  settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5287b87ac5bb_initial_schema.py  a1c3e9f02d41_add_confidence_component_columns.py  b7f4c2a91e8d_add_error_detail_to_orders.py  c8d2f1a3b4e5_add_lab_login_columns.py
backend/app/: main.py
backend/app/api/: deps.py  health.py  labs.py  orders.py
backend/app/api/v1/: review.py
backend/app/core/: config.py  logging.py  scoring.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/domain/: enums.py  errors.py  scoring.py
backend/app/infra/: cache.py  storage.py
backend/app/infra/llm/: __init__.py  base.py  mock_structurer.py  openai_structurer.py
backend/app/infra/ocr/: __init__.py  base.py  clova.py  clova_general.py  mock.py  mock_general.py
backend/app/schemas/: labs.py  orders.py  review.py
backend/app/services/: accuracy.py  auth.py  dictionary.py  document_structuring.py  field_catalog.py  field_update.py  hashing.py  image_validation.py  lab_account.py  marking_detection.py  note_extraction.py  ocr_runner.py  order_confirm.py  order_due_date.py  order_intake.py  order_pipeline.py  order_review_confirm.py  order_status.py  preprocessing.py  routing.py  routing_store.py  scoring.py  shade_detection.py  template_routing.py  type_a_rules.py  type_b_rules.py  type_c_structuring.py
backend/config/: scoring.yaml
backend/data/domain_dict/: abutment.yaml  material.yaml  prosthesis.yaml  shade.yaml
backend/scripts/: dev_bootstrap.py  test_marking.py
backend/tests/: conftest.py  imaging_utils.py  test_auth.py  test_confirm_order.py  test_db_error_cors.py  test_dictionary.py  test_document_structuring.py  test_field_catalog.py  test_general_ocr.py  test_general_pipeline.py  test_health.py  test_hitl_review.py  test_image_validation.py  test_lab_account.py  test_lab_orders.py  test_llm_structurer.py  test_marking_detection.py  test_models.py  test_note_extraction.py  test_ocr_engine.py  test_order_due_date.py  test_order_pipeline.py  test_order_status.py  test_orders_upload.py  test_preprocessing.py  test_retry_ocr.py  test_review_queue.py  test_routing.py  test_routing_store.py  test_scoring_config.py  test_scoring_service.py  test_scoring_weights.py  test_shade_detection.py  test_type_a_rules.py  test_type_b_rules.py  test_type_c_chain.py
docs/: AI_HANDOFF.md  DentalSync_개발_프롬프트_단계별.md  INDEX.md  INTERVIEW_INSIGHTS.md  MANUAL_VERIFICATION_HITL.md  OCR_시스템_아키텍처_v3.md  PROJECT_CONTEXT.md  REQUIREMENTS_CONTEXT.md  USER_PREFERENCES.md
docs/adr/: 0001-llm-vendor-openai.md  0002-hitl-review-api-v1.md
docs/context/: AI_HANDOFF.md  DentalSync_개발_프롬프트_단계별.md  INTERVIEW_INSIGHTS.md  PROJECT_CONTEXT.md  REQUIREMENTS_CONTEXT.md  USER_PREFERENCES.md
docs/design/: OCR_시스템_아키텍처_v3.md  dental_lab_request_ocr_layout_v1_1_0.json
docs/ops/: MANUAL_VERIFICATION_HITL.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/calendar/: page.tsx
frontend/app/lab/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/[orderId]/: page.tsx
frontend/app/review/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AppHeader.tsx  ConfidenceBadge.tsx  RequireLab.tsx
frontend/lib/: api.ts  auth.tsx  bbox.test.ts  bbox.ts  hooks.ts  layout.ts  status.tsx
xlsx/: [CrownOps] 요구사항 정의서.xlsx
(+1 files in other folders)
