[project]
name = "dentalsync-backend"
version = "0.1.0"
description = "DentalSync 백엔드 — FastAPI (Step 0 스캐폴드)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
    "pymupdf>=1.24",
    "boto3>=1.35",
    "redis>=5.0",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# 자동생성 마이그레이션은 린트 대상에서 제외
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # 한글 문자열/주석 유사문자 경고 비활성

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

# OpenCV(cv2)/PyMuPDF 는 타입 스텁이 없어 Any 를 다수 반환한다.
# 이미징 모듈에 한해 Any 관련 strict 플래그를 완화한다.
[[tool.mypy.overrides]]
module = ["app.services.preprocessing", "tests.imaging_utils", "tests.test_preprocessing"]
warn_return_any = false
disallow_any_generics = false
disallow_any_expr = false
# cv2(4.13) 의 MatLike 반환 타입이 uint8 alias 와 불일치 — 이미징 모듈만 완화
disable_error_code = ["return-value"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
